syntax = "proto2";
package kvrpc;

enum MessageType {
    Get = 1;
}
message GetRequest {
}
message GetResponse {
}
message Request {
    required MessageType type = 1;
    optional GetRequest getReq = 2;
}
message Response {
    required MessageType type = 1;
    optional GetResponse getResp = 2;
}
